--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "semgrep",
   "displayName": "Semgrep",
   "description": "Shows findings from https://semgrep.dev",
-  "version": "0.4.0",
+  "version": "0.4.1",
   "engines": {
     "vscode": "^1.66.0"
   },
@@ -69,6 +69,11 @@
         "semgrep.path": {
           "type": "string",
           "default": "semgrep"
+        },
+        "semgrep.config_path": {
+          "type": "string",
+          "default": "",
+          "description": "Optional path to a semgrep configuration file."
         },
         "semgrep.logging": {
           "scope": "window",
